# CH32V208-CMake

./: CMakeLists.txt  README.md  build.bat  build.sh
APP/: broadcaster.c  broadcaster_main.c  ch32v20x_it.c
Debug/: debug.c
HAL/: RTC.c
Ld/: Link.ld
Peripheral/inc/: ch32v20x.h
